--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": "^5.6 || ^7.0 || ^7.1 || ^7.2 || 7.*",
     "illuminate/contracts": ">=5.1.0",
     "illuminate/support": ">=5.1.0",
-    "guildquality/repositories": "^1.0",
+    "guildquality/repositories": "dev-1.0",
     "nesbot/carbon": "^2.22",
     "pusher/pusher-php-server": "^3.0",
     "predis/predis": "~1.1.1",
